<resources>
    <string name="app_name">NotesApp</string>
    <string name="my_notes">My Notes</string>
    <string name="back_button">Back</string>
    <string name="note_entry_title">Add Note</string>


    <string name="delete">Delete</string>

    <string name="no_note_description">Oops!\nNo notes in the list.\nTap + to add.</string>
    <string name="edit_item_title">Edit Item</string>

    <string name="save_action">Save</string>

</resources>