...
            }
        },
        actions = {
            Switch(
                checked = isDarkMode,//isSystemInDarkTheme(), // Initially reflect the system theme
                onCheckedChange = { onThemeToggle() },
                modifier = Modifier.testTag("ThemeToggleSwitch")
            )
        }
    )
}


